--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js --exec babel-node --",
+    "start": "node app.js",
+    "dev": "nodemon app.js --exec babel-node --",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
